@@ -27,19 +27,16 @@ def list_dashboards(**kwargs):
     """
     query = session.query(Dashboard)
 
+    # filter dashboards either by collection or users
     if 'collection_id' in kwargs:
         # filter for dashboards in a collection, and dashboard not in a collection
         if kwargs['collection_id']:
             query = query.filter(Dashboard.collection_id == kwargs['collection_id']).order_by(Dashboard.order)
         else:
             query = query.filter(Dashboard.collection_id == None).order_by(Dashboard.order)
-    # filter by users that can view the dashboards
-    # filter by users that have access to the collection of the dashboard
-    if 'user_id' in kwargs:
-        user_query = query.join(Dashboard.users).filter(User.id == kwargs['user_id'])
-        collection_query = query.join(Dashboard.collections). \
-            join(Collection.users).filter(User.id == kwargs['user_id'])
-        query = user_query.union(collection_query).order_by(Dashboard.title)
+    elif 'user_id' in kwargs:
+        # filter by users that can view the dashboards
+        query = query.join(Dashboard.users).filter(User.id == kwargs['user_id'])
 
     return query.all()
 
