@@ -14,3 +14,4 @@
 * [#21](https://github.com/upfrontsystems/izinto-angular/issues/21) add logged in user to dashboard and collection
 * remove chart selector
 * [#29](https://github.com/upfrontsystems/izinto-angular/issues/29) fix reordering of charts and dashboards
+* [#24](https://github.com/upfrontsystems/izinto-angular/issues/24) do not filter dashboards in collection by user
